Superfamily added but not showing on the correct participants

--- a/less/site.less
+++ b/less/site.less
@@ -59,6 +59,10 @@ path.feature {
     fill: #15b7bf;
 }
 
+path.superfam {
+    fill: #c900a0;
+}
+
 text.label {
     font-size: 1em;
 }
